wso2/gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apim-gateway
  namespace: wso
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - pipr-uat-mgt.dol.go.th
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: custom-ca
  - hosts:
    - pipr-uat-mgt.dol.go.th
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: false
---
apiVersion: networking.istio.io/v1beta1
  kind: VirtualService
  metadata:
    name: apim-gateway-virtualservice
    namespace: wso
  spec:
    gateways:
    - apim-gateway
    hosts:
    - pipr-uat-gateway.dol.go.th
    http:
    - route:
      - destination:
          host: choreo-choreo-connect-router
          port:
            number: 9000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: apim-mgt-virtualservice
  namespace: wso
spec:
  gateways:
  - apim-gateway
  hosts:
  - pipr-uat-mgt.dol.go.th
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: wso2am-pattern-3-am-cp-service
        port:
          number: 9763
